# wally_crawler

./: README.md  data.json  pyproject.toml  scrapy.cfg  xpathcommnands.txt
wally_crawler/: db.py  items.py  middlewares.py  pipelines.py  settings.py
wally_crawler/spiders/: privateimoveis.py
