[tool.poetry]
name = "wally_crawler"
version = "0.1.0"
description = ""
authors = ["João Pedro Chagas <jpchagas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
